tests/ui/conditional-compilation/cfg-attr-multi-invalid-1.stderr
error[E0658]: the `#[no_core]` attribute is an experimental feature
  --> $DIR/cfg-attr-multi-invalid-1.rs:4:21
   |
LL | #![cfg_attr(broken, no_core, no_std)]
   |                     ^^^^^^^
   |
   = note: see issue #29639 <https://github.com/crablang/crablang/issues/29639> for more information
   = help: add `#![feature(no_core)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
